scrollbar fixed

--- a/react-app/src/components/Search/search.css
+++ b/react-app/src/components/Search/search.css
@@ -10,6 +10,10 @@
     
 }
 
+.searchFullPage::-webkit-scrollbar {
+    display: none;
+  }
+
 .resultsMainContainer {
     color: white;
     height: 100vh;   
@@ -17,6 +21,10 @@
     overflow-y: scroll;
     padding-bottom: 60px;
 }
+
+.resultsMainContainer::-webkit-scrollbar {
+    display: none;
+  }
 
 .songResultsDetailContainer {
     display: flex;
@@ -27,6 +35,10 @@
     margin-right: 100px;
     overflow-y: scroll;
 }
+
+.songResultsDetailContainer::-webkit-scrollbar {
+    display: none;
+  }
 
 .songResultsImageContainer {
     height: 40px;
@@ -162,6 +174,10 @@
     max-height: 50vh;
     overflow-y: scroll;
 }
+
+.playlistSearchFullPage::-webkit-scrollbar {
+    display: none;
+  }
 
 .playlistSearchFormContainer{
     padding-right: 250px;
